<resources>
    <string name="app_name">Geocalculator</string>
    <string name="action_settings">Settings</string>
    <string name="lat_p1">Enter latitude for p1</string>
    <string name="long_p1">Enter longitude for p1</string>
    <string name="lat_p2">Enter latitude for p2</string>
    <string name="long_p2">Enter longitude for p2</string>
    <string name="calc_button">Calculate</string>
    <string name="clear_button">clear</string>
    <string name="dis_text">Distance: </string>
    <string name="bear_text">Bearing: </string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string-array name="unitsDistance">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="unitsBearing">bearingUnits>
        <item>Degrees</item>
        <item>Mils</item>
    </string-array>
    <string name="result">%d degrees</string>
    <string name="distance_setting">Distance Unit</string>
    <string name="bearing_setting">Bearing Unit</string>
</resources>
