<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"


    tools:context=".MainActivity">


    <EditText
        android:id="@+id/p1Long"
        android:layout_width="@dimen/text_size"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/long_p1"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/p1Lat"
        android:layout_width="@dimen/text_size"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p1Long"
        android:layout_alignBottom="@+id/p1Long"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/lat_p1"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/p2Lat"
        android:layout_width="@dimen/text_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/p1Lat"
        android:layout_alignStart="@+id/p1Lat"
        android:layout_below="@+id/p1Lat"
        android:ems="10"
        android:hint="@string/lat_p2"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/p2Long"
        android:layout_width="@dimen/text_size"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/p1Long"
        android:ems="10"
        android:hint="@string/long_p2"
        android:inputType="number|numberSigned|numberDecimal" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p2Lat"
        android:text="@string/calc_button" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/calcButton"
        android:layout_toEndOf="@+id/calcButton"
        android:layout_toRightOf="@+id/calcButton"
        android:text="@string/clear_button" />

    <TextView
        android:id="@+id/distanceView"
        android:layout_width="@dimen/result_size"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcButton"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/clearButton"
        android:layout_toStartOf="@+id/clearButton"
        android:text="@string/dis_text" />

    <TextView
        android:id="@+id/bearingView"
        android:layout_width="@dimen/result_size"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/distanceView"
        android:layout_alignLeft="@+id/distanceView"
        android:layout_alignRight="@+id/distanceView"
        android:layout_alignStart="@+id/distanceView"
        android:layout_below="@+id/distanceView"
        android:layout_marginTop="12dp"
        android:text="@string/bear_text" />

    <TextView
        android:id="@+id/disViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/distanceView"
        android:layout_toEndOf="@+id/distanceView"
        android:layout_toRightOf="@+id/distanceView"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/bearingViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bearingView"
        android:layout_alignBottom="@+id/bearingView"
        android:layout_alignEnd="@+id/disViewResult"
        android:layout_alignRight="@+id/disViewResult"
        android:layout_toEndOf="@+id/bearingView"
        android:layout_toRightOf="@+id/bearingView"
        android:textAlignment="textEnd" />

</RelativeLayout>